--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"antd": "^5.24.9",
 		"axios": "^1.9.0",
 		"react": "^19.0.0",
+		"react-countup": "^6.5.3",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
